crates/stef-parser/tests/snapshots/parser__error@const_literal.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "const VALUE: u32 = 1z;"
input_file: crates/stef-parser/tests/inputs/invalid/const_literal.stef
---
stef::parse::const_def (https://docs.rs/stef-parser/0.1.0/stef_parser/error/struct.ParseConstError.html)

  × Failed to parse const declaration
  ╰─▶ Unexpected character
   ╭────
 1 │ const VALUE: u32 = 1z;
   · ───────────┬──────────
   ·            ╰── In this declaration
   ╰────
  help: Expected const declaration in the form `❬B❭const <NAME>: <type> = <literal>;❬B❭`

Error: stef::parse::const_def::char (https://docs.rs/stef-parser/0.1.0/stef_parser/error/enum.ParseConstCause.html#variant.UnexpectedChar)

  × Unexpected character
   ╭────
 1 │ const VALUE: u32 = 1z;
   ·                     ▲
   ·                     ╰── Problematic character
   ╰────
  help: Expected a `❬Y❭;❬Y❭` here

